# rezip-rs

./: .gitignore  Cargo.toml  README.md  gzip.md  huffman-fixed.txt
examples/: describe.rs  dump.rs  emulate.rs  find_failing.rs  guess.rs  print.rs  test.rs  trace.rs  zcat.rs
lib/: Cargo.toml
lib/examples/: collisions.rs  find_failing.rs  hard.rs  trace.rs  zcat.rs
lib/fuzz/: Cargo.toml
lib/fuzz/fuzz_targets/: exec_gzip.rs  trace_gzip_1.rs
lib/src/: all_refs.rs  back_map.rs  bad_table.rs  bestguess.rs  bit.rs  circles.rs  code_tree.rs  filter.rs  gzip.rs  huffman.rs  iters.rs  lib.rs  lookahead.rs  obscure.rs  parse.rs  picker.rs  serialise.rs  serialise_trace.rs  sixteen.rs  technique.rs  trace.rs  tracer.rs  wams.rs
lib/tests/: tracing_size.rs
rezippers/: Cargo.toml
rezippers/src/: cat.rs  dump.rs  errors.rs  main.rs  zero.rs
src/: all_refs.rs  bestguess.rs  bit.rs  circles.rs  code_tree.rs  emulate.rs  encode.rs  filter.rs  guess.rs  guesser.rs  gzip.rs  huffman.rs  infer.rs  iters.rs  lib.rs  lookahead.rs  parse.rs  picker.rs  serialise.rs  serialise_trace.rs  technique.rs  three.rs  trace.rs
