[package]
authors = ["Chris West (Faux) <git@goeswhere.com>"]
name = "librezip"
version = "0.1.0"

[dependencies]
error-chain = "0.11.0"
itertools = "0.6.3"
lazy_static = "0.2.8"
sha2 = "0.6.0"

[dev-dependencies]
rand = "0.3.17"

[dev-dependencies.flate2]
default-features = false
features = ["zlib"]
version = "0.2"
[profile.release]
debug = true
lto = true
