[package]
authors = ["Chris West (Faux) <git@goeswhere.com>"]
name = "librezip"
version = "0.1.0"

[dependencies]
error-chain = "0.11"
itertools = "0.7"
lazy_static = "0.2"
result = "1"
sha2 = "0.7"

[dev-dependencies]
rand = "0.3"

[dev-dependencies.flate2]
default-features = false
features = ["zlib"]
version = "0.2"

[features]
tracing = []

[profile.bench]
debug = true
lto = true

[profile.release]
debug = true
lto = true
