[package]
authors = ["Chris West (Faux) <git@goeswhere.com>"]
name = "librezip"
version = "0.1.0"
edition = "2018"

[dependencies]
byteorder = "1"
failure = "0.1"
itertools = "0.8"
lazy_static = "1"
more-asserts = "0.2"
sha2 = "0.8"

[dev-dependencies]
maplit = "1"
pretty_assertions = "0.5"
rand = "0.7"
rand_chacha = "0.2"

[dev-dependencies.flate2]
default-features = false
features = ["zlib"]
version = "1"

[features]
tracing = []
