[package]
authors = ["Chris West (Faux) <git@goeswhere.com>"]
name = "librezip"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
byteorder = "1"
itertools = "0.15"
lazy_static = "1"
more-asserts = "0.3"
sha2 = "0.11"

[dev-dependencies]
maplit = "1"
pretty_assertions = "0.6"
rand = "0.10"
rand_chacha = "0.10"

[dev-dependencies.flate2]
default-features = false
features = ["zlib"]
version = "1"

[features]
tracing = []
