[package]
authors = ["Chris West (Faux) <git@goeswhere.com>"]
name = "rezippers"
version = "0.1.0"
edition = "2018"

[dependencies]
byteorder = "1"
error-chain = "0.12"
clap = "2"
crc = "1"


[dependencies.flate2]
version = "1"
features = ["rust_backend"]
default-features = false

[dependencies.librezip]
path = "../lib"
