[package]
authors = ["Chris West (Faux) <git@goeswhere.com>"]
name = "rezippers"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
byteorder = "1"
clap = { version = "4", features = ["cargo", "derive"] }
crc = "3"


[dependencies.flate2]
version = "1"
features = ["rust_backend"]
default-features = false

[dependencies.librezip]
path = "../lib"
